<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/PopupCardStyle">
        <RadioGroup
            android:id="@+id/theme_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/light_theme_radio"
                style="@style/RadioButtonStyle"
                android:text="@string/settings_theme_light">
            </RadioButton>
            <RadioButton
                android:id="@+id/dark_theme_radio"
                style="@style/RadioButtonStyle"
                android:text="@string/settings_theme_dark">
            </RadioButton>
            <RadioButton
                android:id="@+id/default_theme_radio"
                style="@style/RadioButtonStyle"
                android:text="@string/settings_theme_default">
            </RadioButton>
        </RadioGroup>
    </androidx.cardview.widget.CardView>

</LinearLayout>