<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.rempaudioeditor.activities.MainActivity">

    <RelativeLayout
        style="@style/HeaderStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/textlogo_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.023"
            app:srcCompat="@drawable/icon_text_logo" />

        <ImageButton
            android:id="@+id/settings_btn"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/icon_settings"
            android:contentDescription="@string/settings_desc"
            android:rotation="20" />

        <ImageButton
            android:id="@+id/new_project_btn"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/settings_btn"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/icon_plus_sign"
            android:contentDescription="@string/newproject_desc" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>